update refinement